feat(castaway): add high signal observability
